--- a/InStructergy.Data/InStructergy.Data.csproj
+++ b/InStructergy.Data/InStructergy.Data.csproj
@@ -62,13 +62,13 @@
     <Compile Include="EntityModels\Post.cs" />
     <Compile Include="EntityModels\Student.cs" />
     <Compile Include="EntityModels\IdentityModels.cs" />
-    <Compile Include="Migrations\202104101115098_InitialCreate.cs" />
-    <Compile Include="Migrations\202104101115098_InitialCreate.Designer.cs">
-      <DependentUpon>202104101115098_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\202104130522401_InitialCreate.cs" />
+    <Compile Include="Migrations\202104130522401_InitialCreate.designer.cs">
+      <DependentUpon>202104130522401_InitialCreate.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202104101118565_initial_migration.cs" />
-    <Compile Include="Migrations\202104101118565_initial_migration.Designer.cs">
-      <DependentUpon>202104101118565_initial_migration.cs</DependentUpon>
+    <Compile Include="Migrations\202104130632234_refactor.cs" />
+    <Compile Include="Migrations\202104130632234_refactor.designer.cs">
+      <DependentUpon>202104130632234_refactor.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
   </ItemGroup>
@@ -80,11 +80,11 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202104101115098_InitialCreate.resx">
-      <DependentUpon>202104101115098_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202104130522401_InitialCreate.resx">
+      <DependentUpon>202104130522401_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104101118565_initial_migration.resx">
-      <DependentUpon>202104101118565_initial_migration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202104130632234_refactor.resx">
+      <DependentUpon>202104130632234_refactor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
