--- a/InStructergy.MVC/InStructergy.MVC.csproj
+++ b/InStructergy.MVC/InStructergy.MVC.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -342,11 +343,14 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Course\Create.cshtml" />
+    <Content Include="Views\Course\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Properties\" />
     <Folder Include="Views\Role\" />
+    <Folder Include="Views\Student\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -361,6 +365,10 @@
     <ProjectReference Include="..\InStructergy.Models\InStructergy.Models.csproj">
       <Project>{E289CCC7-CE34-4FBF-B337-F11B1B73368D}</Project>
       <Name>InStructergy.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InStructergy.Services\InStructergy.Services.csproj">
+      <Project>{AE3B321E-9104-4FEE-A306-982E46E77877}</Project>
+      <Name>InStructergy.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
