--- a/InStructergy.Models/InStructergy.Models.csproj
+++ b/InStructergy.Models/InStructergy.Models.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ApplicationUserModels\RoleViewModel.cs" />
     <Compile Include="CourseModels\CourseCreate.cs" />
     <Compile Include="CourseModels\CourseDetail.cs" />
+    <Compile Include="CourseModels\CourseEdit.cs" />
     <Compile Include="CourseModels\CourseListItem.cs" />
   </ItemGroup>
   <ItemGroup>
