--- a/InStructergy.Models/InStructergy.Models.csproj
+++ b/InStructergy.Models/InStructergy.Models.csproj
@@ -64,7 +64,6 @@
     <Folder Include="FileModels\" />
     <Folder Include="PostModels\" />
     <Folder Include="Properties\" />
-    <Folder Include="StudentModels\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUserModels\RoleViewModel.cs" />
@@ -72,6 +71,10 @@
     <Compile Include="CourseModels\CourseDetail.cs" />
     <Compile Include="CourseModels\CourseEdit.cs" />
     <Compile Include="CourseModels\CourseListItem.cs" />
+    <Compile Include="StudentModels\StudentCreate.cs" />
+    <Compile Include="StudentModels\StudentDetail.cs" />
+    <Compile Include="StudentModels\StudentEdit.cs" />
+    <Compile Include="StudentModels\StudentListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InStructergy.Data\InStructergy.Data.csproj">
