--- a/InStructergy.Services/InStructergy.Services.csproj
+++ b/InStructergy.Services/InStructergy.Services.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CourseService.cs" />
+    <Compile Include="StudentService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InStructergy.Data\InStructergy.Data.csproj">
