--- a/InStructergy.Models/InStructergy.Models.csproj
+++ b/InStructergy.Models/InStructergy.Models.csproj
@@ -62,7 +62,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="FileModels\" />
-    <Folder Include="PostModels\" />
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +70,10 @@
     <Compile Include="CourseModels\CourseDetail.cs" />
     <Compile Include="CourseModels\CourseEdit.cs" />
     <Compile Include="CourseModels\CourseListItem.cs" />
+    <Compile Include="PostModels\PostCreate.cs" />
+    <Compile Include="PostModels\PostDetail.cs" />
+    <Compile Include="PostModels\PostEdit.cs" />
+    <Compile Include="PostModels\PostListItem.cs" />
     <Compile Include="StudentModels\StudentCreate.cs" />
     <Compile Include="StudentModels\StudentDetail.cs" />
     <Compile Include="StudentModels\StudentEdit.cs" />
