--- a/InStructergy.MVC/InStructergy.MVC.csproj
+++ b/InStructergy.MVC/InStructergy.MVC.csproj
@@ -353,11 +353,15 @@
     <Content Include="Views\Student\Details.cshtml" />
     <Content Include="Views\Student\Edit.cshtml" />
     <Content Include="Views\Student\Delete.cshtml" />
+    <Content Include="Views\Post\Index.cshtml" />
+    <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Post\Details.cshtml" />
+    <Content Include="Views\Post\Edit.cshtml" />
+    <Content Include="Views\Post\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Properties\" />
-    <Folder Include="Views\Post\" />
     <Folder Include="Views\Role\" />
   </ItemGroup>
   <ItemGroup>
