--- a/InStructergy.Services/SchoolBoard.Services.csproj
+++ b/InStructergy.Services/SchoolBoard.Services.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{918C051C-AE35-4D0D-829B-41AAAE4CB436}</ProjectGuid>
+    <ProjectGuid>{AE3B321E-9104-4FEE-A306-982E46E77877}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InStructergy.Data</RootNamespace>
-    <AssemblyName>InStructergy.Data</AssemblyName>
+    <RootNamespace>SchoolBoard.Services</RootNamespace>
+    <AssemblyName>SchoolBoard.Services</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -57,26 +57,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityModels\Course.cs" />
-    <Compile Include="EntityModels\File.cs" />
-    <Compile Include="EntityModels\Post.cs" />
-    <Compile Include="EntityModels\Student.cs" />
-    <Compile Include="EntityModels\IdentityModels.cs" />
-    <Compile Include="Migrations\202104130522401_InitialCreate.cs" />
-    <Compile Include="Migrations\202104130522401_InitialCreate.designer.cs">
-      <DependentUpon>202104130522401_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104130632234_refactor.cs" />
-    <Compile Include="Migrations\202104130632234_refactor.designer.cs">
-      <DependentUpon>202104130632234_refactor.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202104132234285_Post.cs" />
-    <Compile Include="Migrations\202104132234285_Post.designer.cs">
-      <DependentUpon>202104132234285_Post.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -84,15 +64,19 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202104130522401_InitialCreate.resx">
-      <DependentUpon>202104130522401_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104130632234_refactor.resx">
-      <DependentUpon>202104130632234_refactor.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202104132234285_Post.resx">
-      <DependentUpon>202104132234285_Post.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="CourseService.cs" />
+    <Compile Include="PostService.cs" />
+    <Compile Include="StudentService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InStructergy.Data\SchoolBoard.Data.csproj">
+      <Project>{918c051c-ae35-4d0d-829b-41aaae4cb436}</Project>
+      <Name>SchoolBoard.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InStructergy.Models\SchoolBoard.Models.csproj">
+      <Project>{e289ccc7-ce34-4fbf-b337-f11b1b73368d}</Project>
+      <Name>SchoolBoard.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
