--- a/SchoolBoard.MVC/SchoolBoard.MVC.csproj
+++ b/SchoolBoard.MVC/SchoolBoard.MVC.csproj
@@ -236,10 +236,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Student\Create.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
-    <Content Include="Views\Course\Create.cshtml" />
     <Content Include="Views\Course\Index.cshtml" />
-    <Content Include="Views\Course\Details.cshtml" />
-    <Content Include="Views\Course\Students.cshtml" />
+    <Content Include="Views\Course\Student.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
