--- a/SchoolBoard.Models/SchoolBoard.Models.csproj
+++ b/SchoolBoard.Models/SchoolBoard.Models.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CourseModels\CourseIndexModel.cs" />
     <Compile Include="CourseModels\CourseListItem.cs" />
     <Compile Include="CourseModels\CourseStudentListModel.cs" />
+    <Compile Include="CourseModels\CourseStudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentModels\MyStudentListItem.cs" />
     <Compile Include="StudentModels\StudentCreate.cs" />
