--- a/SchoolBoard.Data/SchoolBoard.Data.csproj
+++ b/SchoolBoard.Data/SchoolBoard.Data.csproj
@@ -139,6 +139,10 @@
     <Compile Include="Migrations\202104210446198_moreseeddatafix.Designer.cs">
       <DependentUpon>202104210446198_moreseeddatafix.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104220344222_usersfix.cs" />
+    <Compile Include="Migrations\202104220344222_usersfix.Designer.cs">
+      <DependentUpon>202104220344222_usersfix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -206,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202104210446198_moreseeddatafix.resx">
       <DependentUpon>202104210446198_moreseeddatafix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104220344222_usersfix.resx">
+      <DependentUpon>202104220344222_usersfix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
