--- a/SchoolBoard.Models/SchoolBoard.Models.csproj
+++ b/SchoolBoard.Models/SchoolBoard.Models.csproj
@@ -60,6 +60,9 @@
     <Compile Include="CourseModels\CourseListItem.cs" />
     <Compile Include="CourseModels\CourseStudentListModel.cs" />
     <Compile Include="CourseModels\CourseStudentModel.cs" />
+    <Compile Include="PostModels\PostCreate.cs" />
+    <Compile Include="PostModels\PostDetail.cs" />
+    <Compile Include="PostModels\PostListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentModels\MyStudentListItem.cs" />
     <Compile Include="StudentModels\StudentCreate.cs" />
@@ -71,7 +74,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="PostModels\" />
     <Folder Include="PostReplyModels\" />
   </ItemGroup>
   <ItemGroup>
