--- a/SchoolBoard.Services/SchoolBoard.Services.csproj
+++ b/SchoolBoard.Services/SchoolBoard.Services.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CourseService.cs" />
+    <Compile Include="PostService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentService.cs" />
   </ItemGroup>
