--- a/SchoolBoard.Models/SchoolBoard.Models.csproj
+++ b/SchoolBoard.Models/SchoolBoard.Models.csproj
@@ -62,6 +62,7 @@
     <Compile Include="CourseModels\CourseStudentModel.cs" />
     <Compile Include="PostModels\PostCreate.cs" />
     <Compile Include="PostModels\PostDetail.cs" />
+    <Compile Include="PostModels\PostIndexModel.cs" />
     <Compile Include="PostModels\PostListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentModels\MyStudentListItem.cs" />
