--- a/SchoolBoard.MVC/SchoolBoard.MVC.csproj
+++ b/SchoolBoard.MVC/SchoolBoard.MVC.csproj
@@ -241,8 +241,8 @@
     <Content Include="Views\Course\Index.cshtml" />
     <Content Include="Views\Course\Student.cshtml" />
     <Content Include="Views\Student\Details.cshtml" />
-    <Content Include="Views\Student\CreatePost.cshtml" />
     <Content Include="Views\Post\Index.cshtml" />
+    <Content Include="Views\Post\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
